[package]
name = "rust_web_assembly"
version = "0.1.0"
authors = ["Caleb Trachte <cetrachte@hotmail.com>"]
description = "A sample project with wasm-pack, using the Rust programming language"
license = "MIT/Apache-2.0"
repository = "https://github.com/ctrachte/Rust-Web-Assembly"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"